@@ -75,6 +75,8 @@ isabelle.jedit.JEdit_Plugin1 (for isabelle_jedit_main.jar).
 
 *** Document preparation ***
 
+* HTML presentation now includes links to formal entities.
+
 * High-quality blackboard-bold symbols from font "txmia" (LaTeX package
 "pxfonts"): \<bbbA>\<bool>\<complex>\<bbbD>\<bbbE>\<bbbF>\<bbbG>\<bbbH>\<bbbI>\<bbbJ>\<bbbK>\<bbbL>\<bbbM>\<nat>\<bbbO>\<bbbP>\<rat>\<real>\<bbbS>\<bbbT>\<bbbU>\<bbbV>\<bbbW>\<bbbX>\<bbbY>\<int>.
 
